# konan

./: .gitignore  Cargo.toml  Makefile  README.md  konan_project_summary.md  konan_project_summary_2.md  main.tf  outputs.tf  plan.md  rustfmt.toml  script.sh  variable.tf
ai/: Cargo.toml  ai.rs
cli/: Cargo.toml
cli/src/: art_command.rs  file_command.rs  main.rs  template_command.rs
cli/src/sytem_design/: box_template.rs  habit_tracker_template.rs  markdown_adapter.rs  mod.rs
cli/src/tools/: file.rs
crates/blueprint/: Cargo.toml  blueprint.rs  interpreter.rs  template.rs
crates/blueprint/interpreter/: block_adornment.rs  markdown.rs  text.rs  tiptap.rs
crates/blueprint/template/: box_outline.rs  box_patterns.txt
crates/cli/: Cargo.toml
crates/cli/src/: art_command.rs  command_builder.rs  file_command.rs  main.rs  network.rs  pulse_command.rs  template_command.rs
crates/cli_shared/: Cargo.toml  clap_enum.rs  cli_shared.rs  file_command.rs  pulse.rs  template.rs  template_command.rs
crates/cli_shared/tasks/: box_template.rs  file.rs  habit_tracker.rs  mod.rs
crates/designs/: Cargo.toml  box_template.rs  designs.rs  display_utils.rs  habit_tracker_template.rs  markdown_adapter.rs  render.rs  tiptap_adapter.rs  tiptap_interpreter.rs
crates/designs/templates/: box_patterns.txt  habit_tracker.txt
crates/lambda_konan_habits/: Cargo.toml  lambda_konan_habits.rs
crates/lambda_konan_message/: Cargo.toml  lambda_konan_message.rs
crates/lambda_konan_outline/: Cargo.toml  lambda_konan_outline.rs
crates/lambda_shared/: Cargo.toml  lambda_shared.rs
crates/pi_cli/: Cargo.toml
crates/pi_cli/src/: config.rs  connect_command.rs  file_command.rs  main.rs  print_ops.rs  shared.rs
crates/pi_cli/src/commands/: connect_command.rs  file_command.rs  mod.rs  pulse_command.rs  template_command.rs
crates/pi_cli/src/database/: mod.rs  schema.rs
crates/pi_cli/src/database/migrations/: create_pulse.sql
crates/pi_mqtt/: Cargo.toml  pi_mqtt.rs
crates/rongta/: Cargo.toml  IMPROVEMENTS.md  cp437.rs  elements.rs  line.rs  printer.rs  rongta.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  routes.rs
crates/server/src/routes/: editor.rs  history.rs  template.rs
crates/tiptap/: Cargo.toml  test.json  tiptap.rs
docker/: docker-compose.yml  server.Dockerfile  web.Dockerfile
konan_mobile/: Cargo.toml  Dioxus.toml
konan_mobile/assets/styling/: home.css  layout.css  main.css
konan_mobile/src/: main.rs
konan_mobile/src/components/: layout.rs  mod.rs
konan_mobile/src/views/: home.rs
konan_web/: .prettierrc  package.json  pnpm-lock.yaml
konan_web/src/lib/: data.ts  editor.ts  index.ts  printHistory.ts  template.ts
konan_web/src/lib/assets/favicon/: site.webmanifest
konan_web/src/lib/components/: PrintHistory.svelte
konan_web/src/lib/components/Editor/: Editor.svelte  HabitTrackerFormAction.svelte  OutlineFormAction.svelte  ToolBar.svelte  ToolBarButton.svelte
konan_web/src/lib/components/Forms/: HabitTrackerForm.svelte  InputLabel.svelte  OutlineForm.svelte  SubmitButton.svelte
konan_web/src/lib/components/Forms/Editor/: Editor.svelte  ToolBar.svelte  ToolBarButton.svelte
konan_web/src/lib/components/Icons/: Bold.svelte  BulletList.svelte  Calendar.svelte  CenterAlign.svelte  CheckBoxList.svelte  Code.svelte  Delete.svelte  Heading1.svelte  Heading2.svelte  Heading3.svelte  Heading4.svelte  Info.svelte  Italic.svelte  LeftAlign.svelte  NumberList.svelte  OutlineBook.svelte  Paragraph.svelte  Printer.svelte  RightAlign.svelte  SquareMenu.svelte  Underline.svelte
konan_web/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  layout.css
konan_web/src/routes/[sessionId]/: +page.server.ts  +page.svelte
rongta/: Cargo.toml  cp437.rs  elements.rs  rongta.rs
rongta/src/: lib.rs
scripts/: lsusb.sh  pi_deploy.mk
templates/: box_patterns.txt
