[workspace]
resolver = "2"
members = [
  "crates/cli",
  "crates/rongta",
  "crates/designs",
  "crates/server",
  "crates/tiptap",
]

[workspace.package]
version = "0.3.5"
edition = "2024"
authors = ["Cesar <58753718+Ces-D@users.noreply.github.com>"]

[workspace.dependencies]
actix-cors = "0.7"
actix-web = "4"
actix-multipart = "0.7.2"
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["cargo", "derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
env_logger = "0.11.8"
log = "0.4.27"
escpos = { version = "0.16.0", features = ["usb"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
rand = "0.9.2"
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
comrak = "0.49"

rongta = { path = "./crates/rongta" }
designs = { path = "./crates/designs" }
tiptap = { path = "./crates/tiptap" }
