[workspace]
resolver = "2"
members = [
  "crates/cli",
  "crates/rongta",
  "crates/designs",
  "crates/tiptap",
  "crates/lambda_konan_message",
  "crates/lambda_shared",
  "crates/lambda_konan_outline",
  "crates/lambda_konan_habits",
  "crates/pi_mqtt",
]

[workspace.package]
version = "0.3.5"
edition = "2024"
authors = ["Cesar <58753718+Ces-D@users.noreply.github.com>"]

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["cargo", "derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
env_logger = "0.11.8"
log = "0.4.27"
escpos = { version = "0.16.0", features = ["usb"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["full"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-iotdataplane = "1.94.0"
aws-iot-device-sdk-rust = "0.6"
lambda_http = "1.0.2"
rumqttc = "0.24"
tokio-rustls = "0.25"
rustls = "0.22"
rustls-pemfile = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }

rongta = { path = "./crates/rongta" }
designs = { path = "./crates/designs" }
tiptap = { path = "./crates/tiptap" }
