[package]
name = "konan_mobile"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
dioxus = { workspace = true, features = ["router"] }
rongta.workspace = true
anyhow.workspace = true

[features]
default = ["mobile"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
bundle = []
