[package]
name = "blueprint"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "blueprint.rs"

[dependencies]
anyhow.workspace = true
log.workspace = true
rand.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
pulldown-cmark.workspace = true

rongta.workspace = true
tiptap.workspace = true
