[package]
name = "konan"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
env_logger.workspace = true
log.workspace = true
strum.workspace = true
tokio.workspace = true
rand.workspace = true
comrak.workspace = true

rongta.workspace = true
designs.workspace = true
