[package]
name = "konan"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
env_logger.workspace = true
log.workspace = true
tokio.workspace = true
rand.workspace = true
ssh2.workspace = true

rongta.workspace = true
cli_shared.workspace = true
blueprint.workspace = true
