[package]
name = "designs"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "designs.rs"

[dependencies]
anyhow.workspace = true
log.workspace = true
rand.workspace = true
comrak.workspace = true
chrono.workspace = true

tiptap.workspace = true
rongta.workspace = true

[dev-dependencies]
serde_json.workspace = true
