[package]
name = "lambda_konan_habits"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
lambda_runtime.workspace = true
aws-config.workspace = true
aws-sdk-iotdataplane.workspace = true

tiptap.workspace = true
lambda_shared = { path = "../lambda_shared" }

[[bin]]
name = "lambda_konan_habits"
path = "lambda_konan_habits.rs"
