[package]
name = "lambda_konan_outline"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
aws-config.workspace = true
aws-sdk-iotdataplane.workspace = true
lambda_http.workspace = true
tracing.workspace = true

tiptap.workspace = true
lambda_shared = { path = "../lambda_shared" }

[[bin]]
name = "lambda_konan_outline"
path = "lambda_konan_outline.rs"
