[package]
name = "pi_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
env_logger.workspace = true
log.workspace = true
clap.workspace = true
anyhow.workspace = true
rumqttc.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

rongta.workspace = true
blueprint.workspace = true
tiptap.workspace = true
cli_shared.workspace = true
